// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./CopyAddressButton.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="Copy to clipboard"
      class=""
      data-mui-internal-clone-element="true"
      style="cursor: pointer;"
    >
      <button
        aria-label="Copy to clipboard"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
          data-testid="copy-btn-icon"
          focusable="false"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`./CopyAddressButton.stories Untrusted 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="Copy to clipboard"
      class=""
      data-mui-internal-clone-element="true"
      style="cursor: pointer;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
      >
        Click to copy (untrusted)
      </p>
    </span>
  </div>
</div>
`;

exports[`./CopyAddressButton.stories WithChildren 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="Copy to clipboard"
      class=""
      data-mui-internal-clone-element="true"
      style="cursor: pointer;"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 mui-style-17vdyq3-MuiTypography-root"
      >
        0xd9Db...9552
      </span>
    </span>
  </div>
</div>
`;

exports[`./CopyAddressButton.stories WithPrefix 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="Copy to clipboard"
      class=""
      data-mui-internal-clone-element="true"
      style="cursor: pointer;"
    >
      <button
        aria-label="Copy to clipboard"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
          data-testid="copy-btn-icon"
          focusable="false"
        />
      </button>
    </span>
  </div>
</div>
`;
